# tapered_capsule_with_keypoint_detection

./: LICENSE  README.md  README_coacd_pipeline.md  capsule_generator.py  capsule_mesh_fix_documentation.md  capsule_skinning.py  coacd_capsule_pipeline.py  example_usage.py  extract_node_hierarchy.py  gltf_parser.py  minizinc_to_gltf.py  pyproject.toml  quickstart.md  run_tests.py  setup.py  skeleton_analyzer.py  skinned_capsule_pipeline.py  tapered_capsule.mzn  tapered_capsule.py  tapered_capsule_optimization_algorithm.md  tapered_capsule_optimization_algorithm_implementation.md  test_capsule.gltf  test_capsule_visualization.py  test_coacd_pipeline.py  vrm_mesh_analyzer.py  vrm_to_capsules_pipeline.py
.clinerules/: Apps todo file management.instructions.md  Aria VTuber personality traits.instructions.md  Aria commentary randomness system.instructions.md  Audience and tone.instructions.md  Callsign to nested testing.instructions.md  Commit message completeness check.instructions.md  Commit message style.instructions.md  Commit timing flexibility.instructions.md  Common use cases with extensible foundation.instructions.md  Communication preferences and style.instructions.md  Complex and frequent problems warrant solutions.instructions.md  Cross-app architectural boundary correction.instructions.md  Debugger tips.instructions.md  Discuss solutions before implementation.instructions.md  Elixir app readme.instructions.md  Elixir module splitting.instructions.md  Enforce umbrella workflow.instructions.md  Extract tasks into dedicated ADRs.instructions.md  (+22 more)
src/: __init__.py  (+10 more)
(+25 files in other folders)
