[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tapered-capsule"
version = "1.0.0"
description = "Tapered capsule generation system for glTF2 skinned mesh skeletons"
readme = "README.md"
authors = [{name = "Capsule Generation Team"}]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20.0",
    "trimesh>=3.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
]

[project.urls]
Homepage = "https://github.com/chibifire/tapered_capsule_with_keypoint_detection"
Repository = "https://github.com/chibifire/tapered_capsule_with_keypoint_detection.git"

[project.scripts]
tapered-capsule = "tapered_capsule:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools.package-dir]
"" = "src"
